2012-08-13  Ian Bolton  <ian.bolton@arm.com>
            Laurent Desnogues  <laurent.desnogues@arm.com>
            Jim MacArthur  <jim.macarthur@arm.com>
            Marcus Shawcroft  <marcus.shawcroft@arm.com>
            Nigel Stephens  <nigel.stephens@arm.com>
            Ramana Radhakrishnan  <ramana.radhakrishnan@arm.com>
            Richard Earnshaw  <rearnsha@arm.com>
            Sofiane Naci  <sofiane.naci@arm.com>
            Tejas Belagod  <tejas.belagod@arm.com>
            Yufeng Zhang  <yufeng.zhang@arm.com>

	* readelf.c (guess_is_rela): Handle EM_AARCH64.
	(get_machine_name): Likewise.
	(get_aarch64_segment_type): New function.
	(get_segment_type): Handle EM_AARCH64 by calling the new function.
	(get_aarch64_section_type_name): New function.
	(get_section_type_name): Handle EM_AARCH64 by calling the new function.
	(is_32bit_abs_reloc): Handle EM_AARCH64.
	(is_32bit_pcrel_reloc): Likewise.
	(is_64bit_abs_reloc): Likewise.
	(is_64bit_pcrel_reloc): Likewise.
	(is_none_reloc): Likewise.

2012-08-09  Nick Clifton  <nickc@redhat.com>

	* po/vi.po: Updated Vietnamese translation.

2012-08-03  Tom Tromey  <tromey@redhat.com>

	* dlltool.c (scan_obj_file): Close arfile after calling
	bfd_openr_next_archived_file.

2012-08-02  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/14420
	* dwarf.c (process_abbrev_section): Add attribute terminator.
	Warn missing section terminator.
	(get_FORM_name): Special check for 0 value.
	(get_AT_name): Likewise.
	(process_debug_info): Display zero abbrev number.  Check
	attribute terminator.

2012-07-30  Nick Clifton  <nickc@redhat.com>

	* po/binutils.pot: Updated template.
	* po/bg.po: Updated Bulgarian translation.
	* po/es.po: Updated Spanish translation.
	* po/fi.po: Updated Finnish translation.
	* po/fr.po: Updated French translation.
	* po/uk.po: Updated Ukranian translation.

2012-07-28  Kai Tietz  <ktietz@redhat.com>

	* rcparse.y (FILEVERSION): Use optcnumexpr instead of cnumexpr.
	(PRODUCTVERSION): Likewise.
